# maverick

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  MIGRATIONS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SPEC.md  STATUS.md  SUPPORT.md  TEST_PLAN.md  THREAT_MODEL.md  deny.toml  production-readiness.json  roadmap-blockers.json  security-review-package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_question.yml  feature_request.yml
.github/archive/: README.md
.github/archive/workflows/: ci.yml
.github/workflows/: ci.yml  docs-hygiene.yml  fuzz.yml  pilot-release.yml  release-candidate.yml  supply-chain.yml
config/: client.example.yaml  server.example.yaml
conformance/: freeze-readiness.json  frozen-releases.json
conformance/frozen-releases/v0.1.0-conformance.1/: manifest.json
conformance/frozen-releases/v1.0.0-conformance.1/: manifest.json
conformance/runner/: check_freeze_readiness.py  check_frozen_releases.py  python_verify.py  test_check_freeze_readiness.py  test_check_frozen_releases.py  test_check_spec_wire_alignment.py
conformance/vectors/: auth_v1_client_hello.json  auth_v1_server_hello.json  auth_v2_client_hello.json  auth_v2_server_hello.json  error_code_flow_limit.json  frame_dns_query.json  frame_dns_response.json  frame_padding.json  frame_tcp_data.json  open_tcp_domain.json  open_udp.json  replay_window.json  udp_packet_ipv4.json
crates/maverick-cli/: Cargo.toml
crates/maverick-cli/src/: main.rs
crates/maverick-client/: Cargo.toml
crates/maverick-client/src/: connection_manager.rs  dns.rs  h2_transport.rs  h3_transport.rs  http_connect.rs  lib.rs  scheduler.rs  session.rs  socks5.rs  transport.rs  tun_runtime.rs  tunnel.rs  udp.rs  ws_transport.rs
crates/maverick-core/: Cargo.toml
crates/maverick-core/benches/: parser_regression.rs
crates/maverick-core/src/: auth.rs  config.rs  crypto.rs  diagnostics.rs  ech.rs  error.rs  experimental.rs  frame.rs  grpc.rs  lib.rs  noise.rs  padding.rs  replay.rs  tun.rs  util.rs
crates/maverick-core/tests/: conformance_vectors.rs
crates/maverick-sdk/: Cargo.toml
crates/maverick-sdk/src/: lib.rs  platform_helper_ipc.rs  reference_client.rs
crates/maverick-server/: Cargo.toml
crates/maverick-server/src/: auth_gate.rs  fallback.rs  h2_acceptor.rs  lib.rs  relay.rs  runtime_metrics.rs  server.rs  users.rs
crates/maverick-tests/: Cargo.toml
crates/maverick-tests/src/: fingerprint.rs  lib.rs
crates/maverick-tests/tests/: h3_loopback.rs  tcp_relay.rs  tun_packet_runtime.rs
crates/maverick-tests/tests/support/: mod.rs
crates/maverick-tun/: Cargo.toml
crates/maverick-tun/src/: device.rs  lib.rs  runtime.rs
crates/maverick-tun/tests/: runtime.rs
docs/: AUDIT_EVIDENCE_INDEX.md  AUDIT_REMEDIATION_POLICY.md  AUTH_V2_SPEC.md  CAPABILITY_REPORT.md  CI_AND_RELEASE_GATES.md  CONFIG_URI.md  CREDENTIAL_ROTATION.md  DOCS_INDEX.md  ECH_FEATURE_GATE.md  ECH_RUNTIME_PLAN.md  EXPERIMENTAL_TRACKS.md  FAILURE_INJECTION_PLAN.md  GOVERNANCE.md  GUI_TRAY_ARCHITECTURE.md  H3_QUIC_PLAN.md  HANDSHAKE_FALLBACK_DECISION.md  HARNESS_ENGINEERING.md  HPKE_NOISE_EXPERIMENTS.md  INCIDENT_RESPONSE.md  INDEPENDENT_AUDIT_PACKAGE.md  INTEROP_MATRIX.md  IRP_CONTROLLER_QUALIFICATION.md  KEY_LIFECYCLE.md  MAINTAINER_IDENTITY_AND_SIGNING.md  OPEN_SOURCE_CUTOVER_AUDIT_2026_07_16.md  OPERATIONS.md  PHASE3_CLOSEOUT_AND_RECOVERY.md  PLAN_POST_V1.md  PLATFORM_HELPER_IPC.md  PRODUCTION_GO_NO_GO_TEMPLATE.md  PRODUCTION_SCOPE.md  PRODUCT_TUN_ECOSYSTEM_PLAN.md  PUBLIC_HISTORY_BOUNDARY.md  REFERENCE_CLIENT_SDK_BOUNDARY_REVIEW.md  RELEASE_ARTIFACTS.md  RELEASE_GATES_V1_2.md  RELEASE_TAGGING.md  RELEASE_TRAIN.md  SDK_PLAN.md  SECURITY_REVIEW_PLAN.md  (+8 more)
docs/archive/: README.md
docs/archive/components/: CONFORMANCE_RUNNER.md  FUZZ.md
docs/archive/conformance/: implementation-registry.json  vector-manifest.json
docs/archive/fuzz/: seed-manifest.json
docs/archive/legacy/: BENCHMARK_BASELINE.md  BENCHMARK_DASHBOARD.md  BLOCKER_RESOLUTION_PLAN.md  CI_AND_RELEASE_GATES.md  CONFORMANCE_SUITE.md  CREDENTIAL_ROTATION.md  CRYPTO_AGILITY.md  DOCS_INDEX.md  ECH_NATIVE_TLS_LIMITATION.md  ECH_UPSTREAM_STATUS.md  ECH_WORKAROUND.md  OPERATIONS.md  (+28 more)
docs/release-signing/: README.md
examples/systemd/: maverick-server.env.example  maverick-server.service
fuzz/: Cargo.toml
fuzz/fuzz_targets/: auth_decode.rs  frame_decode.rs
public/: index.html
scripts/: active-probe-lab.sh  approved-vm-failure-injection-smoke.sh  approved-vm-tun-apply-smoke.sh  approved-vm-tun-full-helper-smoke.sh  approved-vm-tun-service-smoke.sh  benchmark-dashboard.sh  build-pilot.sh  check-ci-gates.py  check-ech-runtime-blockers.py  check-noise-runtime-approval.py  check-production-readiness.py  check-security-review-package.py  check-tun-helper-approval.py  check-tun-phase2-bridge.py  check-tun-runtime-blockers.py  check-workflow-pins.py  ci-change-scope.py  claim-hygiene.py  criterion-regression.sh  extended-harness.sh  import-crypto-vector-subsets.py  local-harness.sh  log-hygiene.py  network-safety-hygiene.py  public-h3-smoke.sh  public-tcp-smoke.sh  release-artifacts.sh  s2-evidence-audit.py  s2-evidence-collect.sh  s2-evidence-preflight.sh  s2-evidence-report.py  security-dependency-inventory.sh  shape-lab.sh  test-approved-vm-longhaul.py  test-approved-vm-s2-runners.py  test-ci-change-scope.py  test-ci-gates.py  test-claim-hygiene.py  test-ech-runtime-approval.py  test-ech-runtime-blockers.py  (+10 more)
scripts/archive/: README.md
spikes/tun-engine-comparison/: README.md  candidates.json
spikes/tun-engine-comparison/smoltcp-harness/: Cargo.toml
spikes/tun-engine-comparison/smoltcp-harness/src/: lib.rs
test-vectors/: hpke-config-v1.json  ml-kem-768-hybrid-v1.json  noise-xx25519-chachapoly-v1.json
test-vectors/reference-client/: platform-helper-ipc-v1.json
test-vectors/stealth/: active-probe-baseline.json  browser-tls-chrome-150-macos-arm64.json  fingerprint-baseline.json
(+115 files in other folders)
