[workspace]
members = [
  "crates/maverick-core",
  "crates/maverick-tun",
  "crates/maverick-client",
  "crates/maverick-server",
  "crates/maverick-cli",
  "crates/maverick-sdk",
  "crates/maverick-tests",
]
resolver = "2"

[workspace.package]
version = "1.2.0-alpha.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ilhaformosa/maverick"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
boring = "5.1.0"
brotli = "8.0"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
futures = "0.3"
h2 = "0.4"
hkdf = "0.12"
hmac = "0.12"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "=0.2.186"
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = { version = "0.11", default-features = false, features = ["futures-io", "runtime-tokio", "rustls-aws-lc-rs"] }
qrcode = { version = "0.14.1", default-features = false }
rand = "0.9"
rcgen = "0.13"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
smoltcp = { version = "=0.13.1", default-features = false, features = [
  "std",
  "assembler-max-segment-count-4",
  "fragmentation-buffer-size-1500",
  "medium-ip",
  "proto-ipv4",
  "proto-ipv4-fragmentation",
  "proto-ipv6",
  "proto-ipv6-fragmentation",
  "reassembly-buffer-count-1",
  "reassembly-buffer-size-1500",
  "socket-tcp",
  "socket-tcp-reno",
  "socket-udp",
] }
snow = { version = "0.10", default-features = false, features = ["default-resolver", "std", "use-chacha20poly1305", "use-curve25519", "use-getrandom", "use-sha2"] }
subtle = "2"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-boring = "5.0.0"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
webpki-roots = "0.26"
proptest = "1"
zeroize = "1"
