[package]
name = "maverick-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
bytes = "1"
libfuzzer-sys = "0.4"
maverick-core = { path = "../crates/maverick-core" }

[workspace]
members = ["."]

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_decode"
path = "fuzz_targets/auth_decode.rs"
test = false
doc = false
bench = false
