[package]
name = "maverick-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
browser-tls = []
ech = []
h3 = []
hpke-experimental = []
noise-experimental = ["dep:snow"]
ml-kem-hybrid = []

[dependencies]
base64.workspace = true
bytes.workspace = true
hkdf.workspace = true
hmac.workspace = true
rand.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
snow = { workspace = true, optional = true }
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true
snow.workspace = true

[[bench]]
name = "parser_regression"
harness = false
