[package]
name = "maverick-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
browser-tls = ["maverick-core/browser-tls", "maverick-client/browser-tls"]
ech = ["maverick-core/ech", "maverick-client/ech", "maverick-server/ech"]
h3 = ["maverick-client/h3", "maverick-server/h3"]
tun-runtime = ["maverick-client/tun-runtime", "dep:maverick-tun"]

[dependencies]
anyhow.workspace = true
maverick-client = { path = "../maverick-client" }
maverick-core = { path = "../maverick-core" }
maverick-server = { path = "../maverick-server" }
maverick-tun = { path = "../maverick-tun", optional = true }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
keyring-core = "1.0.0"

[dev-dependencies]
rcgen.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
